backend/infra/aws/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: har-backend-svc
  namespace: har-local
spec:
  selector:
    app: har-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
